further cleanup, also switched to DESEQ2 by default in order for the provided test data to give meaningful results

--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
   "kmer_length": 31,
   "lib_type": "rf",
   "output_dir":"DEkupl_result",
-  "diff_method": "Ttest",
+  "diff_method": "DESeq2",
   "chunk_size":1000000,
   "r1_suffix": "_1.fastq.gz",
   "r2_suffix": "_2.fastq.gz",
